@@ -180,6 +180,22 @@ public:
     virtual ~wxIcon();
 
     /**
+        Attach a Windows icon handle.
+
+        This wxMSW-specific method allows to assign a native Windows @c HICON
+        (which must be castes to @c WXHICON opaque handle type) to wxIcon.
+        Notice that this means that the @c HICON will be destroyed by wxIcon
+        when it is destroyed.
+
+        @return @true if successful.
+
+        @onlyfor{wxmsw}
+
+        @since 2.9.5
+    */
+    bool CreateFromHICON(WXHICON icon);
+
+    /**
         Returns disabled (dimmed) version of the icon.
 
         This method is available in wxIcon only under wxMSW, other ports only
